# vvcli

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
sample/: query_sample.json  test.txt
src/vvcli/: __init__.py  api.py  cli.py  text_to_speech.py  tools.py  util.py
src/vvcli/api/: __init__.py  audio.py  call.py  presets.py  speakers.py
tests/: conftest.py  test_call_api.py  test_cli.py  test_presets_api.py  test_speakers_api.py  test_util.py
tests/samples/: audio_query.json  presets.json  split_text_after.json  split_text_before.txt
