[project]
name = "vvcli"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "atu4403", email = "73111778+atu4403@users.noreply.github.com" }
]
dependencies = [
    "requests~=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
