[project]
name = "vvcli"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "atu4403", email = "73111778+atu4403@users.noreply.github.com" }
]
dependencies = [
    "requests~=2.31.0",
    "fire~=0.5.0",
    "alive-progress~=3.1.4",
    "bs4~=0.0.1",
    "Pillow~=10.0.0",
    "pydub~=0.25.1",
    "jinja2~=3.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "robotframework~=6.1",
    "pytest~=7.4.0",
    "pytest-watch~=4.2.0",
    "coverage~=7.2.7",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.11.1",
]

[tool.hatch.metadata]
allow-direct-references = true
[project.scripts]
vv = 'vvcli.cli:main'
